src/test/ui/generator/partial-drop.stderr
error: generator cannot be sent between threads safely
  --> $DIR/partial-drop.rs:12:5
   |
LL |     assert_send(|| {
   |     ^^^^^^^^^^^ generator is not `Send`
   |
   = help: within `[generator@$DIR/partial-drop.rs:12:17: 18:6]`, the trait `Send` is not implemented for `Foo`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/partial-drop.rs:17:9
   |
LL |         let guard = Bar { foo: Foo, x: 42 };
   |             ----- has type `Bar` which is not `Send`
LL |         drop(guard.foo);
LL |         yield;
   |         ^^^^^ yield occurs here, with `guard` maybe used later
LL |     });
   |     - `guard` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/partial-drop.rs:40:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: generator cannot be sent between threads safely
  --> $DIR/partial-drop.rs:20:5
   |
LL |     assert_send(|| {
   |     ^^^^^^^^^^^ generator is not `Send`
   |
   = help: within `[generator@$DIR/partial-drop.rs:20:17: 28:6]`, the trait `Send` is not implemented for `Foo`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/partial-drop.rs:27:9
   |
LL |         let guard = Bar { foo: Foo, x: 42 };
   |             ----- has type `Bar` which is not `Send`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `guard` maybe used later
LL |     });
   |     - `guard` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/partial-drop.rs:40:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: generator cannot be sent between threads safely
  --> $DIR/partial-drop.rs:30:5
   |
LL |     assert_send(|| {
   |     ^^^^^^^^^^^ generator is not `Send`
   |
   = help: within `[generator@$DIR/partial-drop.rs:30:17: 37:6]`, the trait `Send` is not implemented for `Foo`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/partial-drop.rs:36:9
   |
LL |         let guard = Bar { foo: Foo, x: 42 };
   |             ----- has type `Bar` which is not `Send`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `guard` maybe used later
LL |     });
   |     - `guard` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/partial-drop.rs:40:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to 3 previous errors

